--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,8 @@
   --secondary_color: #7395AE;
   --extra_color: #5D5C61;
   --highlight_color: #ff7f50;
-  --background_color: rgba(100, 100, 100, 0.1);
+  --background_color: #f5f5f5;
+  /* --background_color: rgba(100, 100, 100, 0.1); */
   /* selection 3 */
   /* --primary_color: #1F2833;
   --secondary_color: #45A29E;
