--- a/assets/project/homepage/style.css
+++ b/assets/project/homepage/style.css
@@ -60,8 +60,9 @@ img{
   width: 1200px;
   background-color: white;
   border-radius: 2px;
-  margin: auto;
+  margin: 16px auto;
   padding: 16px;
+  
 }
 .label-direction{
   color: var(--primary_color);
@@ -130,6 +131,9 @@ img{
 }
 .row-item{
   display: block;
+  margin-left: -4px;
+  margin-right: -4px;
+  background-color: var(--background_color);
 }
 .row-item::after{
   content: "";
@@ -148,11 +152,15 @@ img{
   text-decoration: none;
   color: black;
   float: left;
-  border: 1px solid rgba(115, 149, 174, 0.5);
+  
   border-radius: 2px;
+  padding-left: 4px;
+  padding-right: 4px;
 }
-
-.item:hover{
+.item-container{
+  border: 1px solid rgba(115, 149, 174, 0.5);
+}
+.item-container:hover{
   border: 1px solid rgba(115, 149, 174, 1);
   box-shadow: 0 5px 10px #ccc;
 }
@@ -162,12 +170,12 @@ img{
   align-items: flex-start;
 }
 .item-img{
-  width: 70%;
+  width: 100%;
   height: auto;
-  border-radius:50%;
 }
 .item-content{
   padding: 8px;
+  background-color:white
 }
 .item-name{
   font-size: 12px;
