--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,6 +61,113 @@ h4 {
 .display {
   display: flex !important;
 }
+/* ======= Toast message ======== */
+
+#toast {
+  position: fixed;
+  top: 32px;
+  right: 32px;
+  z-index: 999999;
+}
+
+.toast {
+  display: flex;
+  align-items: center;
+  background-color: #fff;
+  border-radius: 2px;
+  padding: 20px 0;
+  min-width: 400px;
+  max-width: 450px;
+  border-left: 4px solid;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
+  transition: all linear 0.3s;
+}
+
+@keyframes slideInLeft {
+  from {
+    opacity: 0;
+    transform: translateX(calc(100% + 32px));
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+@keyframes fadeOut {
+  to {
+    opacity: 0;
+  }
+}
+
+.toast--success {
+  border-color: var(--primary_color);
+}
+
+.toast--success .toast__icon {
+  color: var(--primary_color);
+}
+
+.toast--info {
+  border-color: #2f86eb;
+}
+
+.toast--info .toast__icon {
+  color: #2f86eb;
+}
+
+.toast--warning {
+  border-color: #ffc021;
+}
+
+.toast--warning .toast__icon {
+  color: #ffc021;
+}
+
+.toast--error {
+  border-color: #ff623d;
+}
+
+.toast--error .toast__icon {
+  color: #ff623d;
+}
+
+.toast + .toast {
+  margin-top: 24px;
+}
+
+.toast__icon {
+  font-size: 24px;
+}
+
+.toast__icon,
+.toast__close {
+  padding: 0 16px;
+}
+
+.toast__body {
+  flex-grow: 1;
+}
+
+.toast__title {
+  font-size: 16px;
+  font-weight: 600;
+  color: #333;
+}
+
+.toast__msg {
+  font-size: 14px;
+  color: #888;
+  margin-top: 6px;
+  line-height: 1.5;
+}
+
+.toast__close {
+  font-size: 20px;
+  color: rgba(0, 0, 0, 0.3);
+  cursor: pointer;
+}
+
 /* Header begin */
 #header {
   width: 100%;
@@ -73,11 +180,22 @@ h4 {
   font-size: 18px;
   font-weight: 500;
   box-shadow: 5px 0 10px rgba(0, 0, 0, 0.5);
+  height: 56px;
   
 }
 #header .brand-name {
   padding: 16px;
 }
+#header .brand-logo{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#header .brand-logo img{
+  width: 150px;
+  height: auto;
+}
+
 #header .nav {
   display: flex;
   align-items: center;
@@ -107,14 +225,16 @@ h4 {
   text-decoration: none;
   color: white;
 }
+
+
 #header .search {
 }
 #search-product-name {
   border: none;
-  line-height: 2;
+  line-height: 1.8;
   border-radius: 4px;
   outline: none;
-  padding: 4px 16px;
+  padding: 4px 8px;
 }
 #submit-button {
   background-color: white;
