--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,6 +38,9 @@ body {
   font-family: "Azeret Mono", monospace;
   font-family: "Roboto Slab", serif;
 }
+html{
+  background-color: var(--background_color);
+}
 a{
   display: block;
   text-decoration: none;
@@ -61,6 +64,10 @@ h4 {
 .display {
   display: flex !important;
 }
+input{
+	font-family: "Azeret Mono", monospace;
+	font-family: "Roboto Slab", serif;
+}
 /* ======= Toast message ======== */
 
 #toast {
@@ -69,7 +76,9 @@ h4 {
   right: 32px;
   z-index: 999999;
 }
-
+.mt-16{
+  margin-top: 16px!important;
+}
 .toast {
   display: flex;
   align-items: center;
@@ -362,3 +371,124 @@ h4 {
 }
 
 /* Modal end */
+ /* item section*/
+ .content-section{
+  display: flex;
+  flex-direction: column;
+  margin: 0px auto;
+  width: 1200px;
+  max-width: 1200px;
+  background-color: white;
+}
+.row-item{
+  display: block;
+  margin-left: -4px;
+  margin-right: -4px;
+  background-color: var(--background_color);
+}
+.row-item::after{
+  content: "";
+  display: block;
+  clear: both;
+  height: 8px;
+  background-color: var(--background_color);
+}
+.item-col-2{
+  width: 16.666666%;
+}
+.item-col-2-4{
+  width: 20%;
+}
+.item{
+  /* height: 130px;
+  max-height: 130px; */
+  height: 320px;
+  max-height: 320px;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+  color: black;
+  float: left;
+  padding-left: 4px;
+  padding-right: 4px;
+}
+.item-container{
+  /* border: 1px solid rgba(115, 149, 174, 0.5); */
+  border: 1px solid var(--primary_color);
+  position: relative;
+}
+.item-container:hover{
+  /* border: 1px solid rgba(115, 149, 174, 1); */
+  border: 1px solid var(--highlight_color);
+  box-shadow: 0 5px 10px #ccc;
+  transform: translateY(-2px);
+}
+.item-image{
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+}
+.item.item-col-2 .item-img{
+  width: 190px;
+  height: 190px;
+}
+.item.item-col-2-4 .item-img{
+  width: 180px;
+  height: 180px;
+}
+.item-content{
+  padding: 8px;
+  background-color:white;
+}
+.item-name{
+  font-size: 12px;
+}
+.item-old-price{
+  color: var(--extra_color);
+  width: 16px;
+  margin-top: 16px;
+  font-size: 12px;
+  text-decoration: line-through;
+}
+.item-info{
+  margin-top: 16px;
+}
+.item-content-section{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+.item-add-button{
+  font-size: 10px;
+  float: left;
+  padding: 8px 8px;
+  background-color: var(--primary_color);
+  color: white;
+}
+.item-add-button:hover{
+  background-color: var(--secondary_color);
+}
+.item-add-button::after{
+  content: "";
+  display: block;
+  clear: both;
+}
+.item-price{
+  font-size: 12px;
+
+}
+.item-discount{
+  font-size: 12px;
+  width: 75px;
+  background-color: var(--highlight_color);
+  color: white;
+  border-radius: 4px;
+  text-align: center;
+  padding: 4px 0;
+  border-left: 2px dotted white;
+  border-right: 2px dotted white;
+  position: absolute;
+  top: 0;
+  right: -4px;
+}
