--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -492,3 +492,40 @@ input{
   top: 0;
   right: -4px;
 }
+
+/* pagination */
+.pagination{
+  
+}
+.pagination-container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.pagination ul{
+  display: flex;
+  flex-direction: row;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+.pagination li{
+  display: block;
+  background-color: white;
+
+}
+.pagination li:hover:not(.active) a{
+  background-color: var(--secondary_color);
+  color: white;
+}
+.pagination li+li{
+  margin-left: 8px;
+}
+.pagination a{
+  padding: 8px 16px;
+}
+
+.pagination li.active a{
+  background-color: var(--secondary_color);
+  color: white;
+}
