--- a/assets/project/productpage/style.css
+++ b/assets/project/productpage/style.css
@@ -1,20 +1,20 @@
-.row{
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	margin-left: -4px;
-	margin-right: -4px;
+.row {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: -4px;
+  margin-right: -4px;
 }
-.col-6{
-	width: 50%;
-	margin-left: 4px;
-	margin-right: 4px;
+.col-6 {
+  width: 50%;
+  margin-left: 4px;
+  margin-right: 4px;
 }
-.button{
-	background-color: var(--primary_color);
+.button {
+  background-color: var(--primary_color);
 }
-.button:hover{
-	background-color: var(--secondary_color);
+.button:hover {
+  background-color: var(--secondary_color);
 }
 .section-label {
   display: flex;
@@ -40,37 +40,41 @@
 #product {
   width: 80%;
 }
-.sub-nav-section h3{
-	padding: 24px 0;
+.sub-nav-section h3 {
+  padding: 24px 0;
 }
-.sub-nav-section::after{
-	margin-top: 16px;
-	content: "";
-	display: block;
-	border-bottom: 1px solid var(--secondary_color);
+.sub-nav-section::after {
+  margin-top: 16px;
+  content: "";
+  display: block;
+  border-bottom: 1px solid var(--secondary_color);
 }
-.sub-nav-section ul{
-	list-style: none;
-	margin: 0;
-	padding: 0;
+.sub-nav-section ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
-.sub-nav-section li{
-	display: block;
-	padding: 8px 8px 8px 32px;
+.sub-nav-section li {
+  display: block;
+  padding: 8px 8px 8px 32px;
 }
 
-.sub-nav-section input[type="text"]{
-	outline: none;
-	padding: 4px 8px;
-
+.sub-nav-section input[type="text"] {
+  outline: none;
+  border: none;
+  padding: 4px 8px;
+  border-radius: 4px;
 }
-.sub-nav-section input[type="submit"]{
-	outline: none;
-	border: none;
-	display: block;
-	color: white;
-	width: 100%;
-	padding: 8px 0;
+.sub-nav-section input[type="text"]:hover {
+  outline: 1px solid var(--primary_color);
+}
+.sub-nav-section input[type="submit"] {
+  outline: none;
+  border: none;
+  display: block;
+  color: white;
+  width: 100%;
+  padding: 8px 0;
 }
 .sort-container {
   display: flex;
@@ -79,6 +83,10 @@
   align-items: center;
 }
 .sort-direction {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
   background-color: var(--background_color);
 }
 
@@ -93,11 +101,29 @@
   color: black;
   margin-left: 8px;
 }
-.sort-container a.active{
+.sort-container a.active {
   background-color: var(--primary_color);
   color: white;
 }
 .sort-container a:hover {
   background-color: var(--primary_color);
   color: white;
+}
+.pagination-plus {
+  display: flex;
+  flex-direction: row;
+}
+.pagination-plus a {
+  border: 1px solid var(--secondary_color);
+  padding: 8px 16px;
+  background-color: white;
+  margin-left: 8px;
+}
+.pagination-plus a:hover:not(.disable) {
+  background-color: var(--primary_color);
+  color: white;
+}
+.pagination-plus a.disable{
+  background-color: var(--background_color);
+  cursor: default;
 }
