--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,6 +84,9 @@ input{
 .mt-32{
   margin-top: 32px!important;
 }
+.mb-32{
+  margin-bottom: 32px!important;
+}
 .toast {
   display: flex;
   align-items: center;
@@ -406,6 +409,14 @@ input{
   margin: 4px auto;
   padding: 16px;
 }
+
+.label-direction{
+  color: var(--primary_color);
+}
+.label-direction:hover{
+  color: var(--secondary_color);
+}
+
  .content-section{
   display: flex;
   flex-direction: column;
