--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,7 +35,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: "Azeret Mono", monospace;
+  /* font-family: "Azeret Mono", monospace; */
   font-family: "Roboto Slab", serif;
 }
 
