--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,7 +35,7 @@
 body {
   margin: 0;
   padding: 0;
-  /* font-family: "Azeret Mono", monospace; */
+  font-family: "Azeret Mono", monospace;
   font-family: "Roboto Slab", serif;
 }
 
@@ -329,7 +329,8 @@ input{
 }
 .footer-section a{
   padding: 12px 16px;
-  font-size: 13px;
+  font-size: 14px;
+  font-weight: 500;
 }
 .ruler-line{
   height: 4px;
@@ -492,13 +493,14 @@ input{
   background-color:white;
 }
 .item-name{
-  font-size: 12px;
+  font-size: 13px;
+  font-weight: 500;
 }
 .item-old-price{
   color: var(--extra_color);
   width: 16px;
   margin-top: 16px;
-  font-size: 12px;
+  font-size: 14px;
   text-decoration: line-through;
 }
 .item-info{
@@ -511,9 +513,10 @@ input{
   align-items: center;
 }
 .item-add-button{
-  font-size: 10px;
+  font-size: 12px;
+  font-weight: 500;
   float: left;
-  padding: 8px 8px;
+  padding: 8px 6px;
   background-color: var(--primary_color);
   color: white;
 }
@@ -526,7 +529,7 @@ input{
   clear: both;
 }
 .item-price{
-  font-size: 12px;
+  font-size: 16px;
 
 }
 .item-discount{
